[project]
name = "hpc-access-cli"
version = "0.2.0"
authors = [
  { name="Manuel Holtgrewe", email="manuel.holtgrewe@bih-charite.de" },
]
description = "CLI for hpc-access"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "annotated-types==0.6.0",
  "anyio==4.2.0",
  "black==24.2.0",
  "certifi==2024.2.2",
  "cffi==1.16.0",
  "click==8.1.7",
  "editables==0.5",
  "exceptiongroup==1.2.0",
  "h11==0.14.0",
  "hatchling==1.21.1",
  "html5lib==1.1",
  "httpcore==1.0.3",
  "httpx==0.26.0",
  "idna==3.6",
  "ldap3==2.9.1",
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "mechanize==0.4.9",
  "mypy-extensions==1.0.0",
  "nodeenv==1.8.0",
  "packaging==23.2",
  "pathspec==0.12.1",
  "platformdirs==4.2.0",
  "pluggy==1.4.0",
  "pyasn1==0.5.1",
  "pycparser==2.21",
  "pydantic==2.6.1",
  "pydantic-settings==2.1.0",
  "pydantic_core==2.16.2",
  "Pygments==2.17.2",
  "pyhumps==3.8.0",
  "pyright==1.1.350",
  "python-dotenv==1.0.1",
  "rich==13.7.0",
  "six==1.16.0",
  "sniffio==1.3.0",
  "tomli==2.0.1",
  "trove-classifiers==2024.1.31",
  "typer==0.9.0",
  "typing_extensions==4.9.0",
  "webencodings==0.5.1",
  "xattr==1.1.0",
]

[project.scripts]
hpc-access-cli = "hpc_access_cli.main:app"

[project.urls]
Homepage = "https://github.com/bihealth/hpc-access"
Issues = "https://github.com/bihealth/hpc-access/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
